RESOLVED FIXED214597
Frequent Network error messages: "ResourceLoadStatisticsDatabaseStore::topPrevalentResourceWithUserInteractionDaysSinceUserInteractionStatement query failed to step, error message: no more rows available"
https://bugs.webkit.org/show_bug.cgi?id=214597
Summary Frequent Network error messages: "ResourceLoadStatisticsDatabaseStore::topPre...
Kate Cheney
Reported 2020-07-21 09:11:01 PDT
These network errors have been appearing since switching to the ITP SQLite store.
Attachments
Patch (4.78 KB, patch)
2020-07-21 10:19 PDT, Kate Cheney
no flags
Kate Cheney
Comment 1 2020-07-21 09:11:26 PDT
Kate Cheney
Comment 2 2020-07-21 10:19:22 PDT
John Wilander
Comment 3 2020-07-21 10:47:10 PDT
Comment on attachment 404832 [details] Patch r=me if EWS is happy.
EWS
Comment 4 2020-07-21 12:10:30 PDT
Committed r264670: <https://trac.webkit.org/changeset/264670> All reviewed patches have been landed. Closing bug and clearing flags on attachment 404832 [details].
Note You need to log in before you can comment on or make changes to this bug.